feat: add movies-router movies-controller and get and post request form movies
